--- a/package.json
+++ b/package.json
@@ -1,22 +1,50 @@
 {
-  "name": "news",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~54.0.31",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "name": "news",
+    "version": "1.0.0",
+    "main": "index.ts",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "lint": "eslint . --ext .ts,.tsx",
+        "lint:fix": "eslint . --ext .ts,.tsx --fix",
+        "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+        "type-check": "tsc --noEmit"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^2.2.0",
+        "@react-navigation/bottom-tabs": "^7.9.1",
+        "@react-navigation/native": "^7.1.27",
+        "@react-navigation/native-stack": "^7.9.1",
+        "@reduxjs/toolkit": "^2.11.2",
+        "@sentry/react-native": "^7.8.0",
+        "axios": "^1.13.2",
+        "expo": "~54.0.31",
+        "expo-status-bar": "~3.0.9",
+        "i18next": "^25.7.4",
+        "react": "19.1.0",
+        "react-i18next": "^16.5.3",
+        "react-native": "0.81.5",
+        "react-native-config": "^1.6.1",
+        "react-native-get-random-values": "^2.0.0",
+        "react-native-safe-area-context": "^5.6.2",
+        "react-native-screens": "^4.19.0",
+        "react-redux": "^9.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.28.6",
+        "@types/react": "~19.1.0",
+        "@types/react-native": "^0.73.0",
+        "@typescript-eslint/eslint-plugin": "^8.53.0",
+        "@typescript-eslint/parser": "^8.53.0",
+        "eslint": "^9.39.2",
+        "prettier": "^3.8.0",
+        "typescript": "~5.9.2"
+    },
+    "engines": {
+        "node": ">=20.0.0",
+        "yarn": ">=1.22.0"
+    },
+    "private": true
 }
